extends Control

@export var potion_icon: Texture2D
@export var potion_hotkey: String = "use_potion" # –∞–±–æ "use_potion"
@export var max_potions: int = 5

var current_potions := 0  # –ü–æ—á–∏–Ω–∞—î–º–æ –∑ 0, —â–æ–± –Ω–µ –ø–æ–∫–∞–∑—É–≤–∞—Ç–∏ –¥–µ—Ñ–æ–ª—Ç–Ω—ñ –∑–Ω–∞—á–µ–Ω–Ω—è

@onready var button = $PotionButton
@onready var icon = $PotionButton/PotionIcon
@onready var count_label = $PotionButton/PotionCount

func _ready():
	# Potion UI —Ç–µ–ø–µ—Ä –Ω–∞—Å–ª—ñ–¥—É—î –≤–∏–¥–∏–º—ñ—Å—Ç—å –≤—ñ–¥ UICanvas
	print("üé® PotionUI: _ready() - Potion UI initialized")
	
	# –î–æ–¥–∞—î–º–æ –¥–æ –≥—Ä—É–ø–∏ –¥–ª—è –ø–æ—à—É–∫—É GameManager
	add_to_group(GameGroups.POTION_UI)
	print("üé® PotionUI: Added to group 'potion_ui'")
	
	if potion_icon:
		icon.texture = potion_icon
	
	# –û–Ω–æ–≤–ª—é—î–º–æ –∫—ñ–ª—å–∫—ñ—Å—Ç—å –∑—ñ–ª–ª—è –∑ GameManager
	update_potion_count_from_game_manager()
	_update_count()
	
	# –ü–æ–¥–∫–ª—é—á–∞–µ–º —Å–∏–≥–Ω–∞–ª –Ω–∞–∂–∞—Ç–∏—è –∫–Ω–æ–ø–∫–∏
	if button:
		button.pressed.connect(_use_potion)
	
	# –ü—ñ–¥–ø–∏—Å—É—î–º–æ—Å—è –Ω–∞ –ø–æ–¥—ñ—ó EventBus –¥–ª—è –∞–≤—Ç–æ–º–∞—Ç–∏—á–Ω–æ–≥–æ –æ–Ω–æ–≤–ª–µ–Ω–Ω—è
	if Engine.has_singleton("EventBus"):
		EventBus.item_added.connect(_on_item_added)
		EventBus.item_removed.connect(_on_item_removed)
		EventBus.inventory_updated.connect(_on_inventory_updated)
		print("üé® PotionUI: –ü—ñ–¥–ø–∏—Å–∞–Ω–æ –Ω–∞ –ø–æ–¥—ñ—ó EventBus")

func _process(_delta):
	# –ù–µ –æ–±—Ä–∞–±–∞—Ç—ã–≤–∞–µ–º –∏—Å–ø–æ–ª—å–∑–æ–≤–∞–Ω–∏–µ –∑–µ–ª–∏–π –≤–æ –≤—Ä–µ–º—è –ø–∞—É–∑—ã
	if get_tree().paused:
		return
		
	if Input.is_action_just_pressed(potion_hotkey):
		_use_potion()

func _use_potion():
	# –ü–µ—Ä–µ–≤—ñ—Ä—è—î–º–æ, —á–∏ –≥—Ä–∞–≤–µ—Ü—å –∂–∏–≤–∏–π
	var player = GameGroups.get_first_node_in_group(GameGroups.PLAYER)
	if player and player.current_health <= 0:
		return
	
	# –ü–µ—Ä–µ–≤—ñ—Ä—è—î–º–æ –∫—ñ–ª—å–∫—ñ—Å—Ç—å –∑—ñ–ª–ª—è –≤ —Ü–µ–Ω—Ç—Ä–∞–ª—ñ–∑–æ–≤–∞–Ω–æ–º—É —ñ–Ω–≤–µ–Ω—Ç–∞—Ä—ñ
	if Engine.has_singleton("ServiceLocator"):
		var service_locator = Engine.get_singleton("ServiceLocator")
		var inventory_manager = service_locator.get_inventory_manager() if service_locator and service_locator.has_method("get_inventory_manager") else null
		if not inventory_manager:
			return
		
		var potion_count = inventory_manager.get_item_count("potion")
		if potion_count > 0:
			# –í–∏–¥–∞–ª—è—î–º–æ –∑—ñ–ª–ª—è –∑ —Ü–µ–Ω—Ç—Ä–∞–ª—ñ–∑–æ–≤–∞–Ω–æ–≥–æ —ñ–Ω–≤–µ–Ω—Ç–∞—Ä—é
			inventory_manager.remove_item("potion", 1)
			
			# –û–Ω–æ–≤–ª—é—î–º–æ –ª–æ–∫–∞–ª—å–Ω–∏–π UI
			current_potions = inventory_manager.get_item_count("potion")
			_update_count()
			animate_button()
			
			# –ó–Ω–∞—Ö–æ–¥–∏–º–æ –≥—Ä–∞–≤—Ü—è —Ç–∞ –≤—ñ–¥–Ω–æ–≤–ª—é—î–º–æ –π–æ–≥–æ HP
			if player and player.has_method("heal_damage"):
				player.heal_damage(50)  # –í—ñ–¥–Ω–æ–≤–ª—é—î–º–æ 50 HP
				
				# –ï–º—ñ—Ç—É—î–º–æ –ø–æ–¥—ñ—é —á–µ—Ä–µ–∑ EventBus
				if Engine.has_singleton("EventBus"):
					EventBus.item_used.emit("potion")

func _update_count():
	if count_label:
		count_label.text = "x%d" % current_potions
		print("üé® PotionUI: _update_count() - current_potions: ", current_potions, " text: ", count_label.text)
	
func set_potion_count(count: int):
	"""–í—Å—Ç–∞–Ω–æ–≤–ª—é—î –∫—ñ–ª—å–∫—ñ—Å—Ç—å –∑—ñ–ª–ª—è –∑ GameManager"""
	current_potions = count
	print("üé® PotionUI: set_potion_count() called with count: ", count)
	_update_count()

func update_potion_count_from_game_manager():
	"""–û–Ω–æ–≤–ª—é—î –∫—ñ–ª—å–∫—ñ—Å—Ç—å –∑—ñ–ª–ª—è –∑ GameManager"""
	if Engine.has_singleton("ServiceLocator"):
		var inventory_manager = ServiceLocator.get_inventory_manager()
		if inventory_manager:
			var potion_count = inventory_manager.get_item_count("potion")
			print("üé® PotionUI: update_potion_count_from_game_manager() - found ", potion_count, " potions in InventoryManager")
			current_potions = potion_count
			_update_count()
		else:
			print("üé® PotionUI: InventoryManager not found, keeping current_potions = ", current_potions)
	else:
		print("üé® PotionUI: ServiceLocator not found, keeping current_potions = ", current_potions)

func _on_item_added(item_id: String, _quantity: int):
	"""–û–±—Ä–æ–±–ª—è—î –ø–æ–¥—ñ—é –¥–æ–¥–∞–≤–∞–Ω–Ω—è –ø—Ä–µ–¥–º–µ—Ç–∞ —á–µ—Ä–µ–∑ EventBus"""
	if item_id == "potion":
		update_potion_count_from_game_manager()

func _on_item_removed(item_id: String, _quantity: int):
	"""–û–±—Ä–æ–±–ª—è—î –ø–æ–¥—ñ—é –≤–∏–¥–∞–ª–µ–Ω–Ω—è –ø—Ä–µ–¥–º–µ—Ç–∞ —á–µ—Ä–µ–∑ EventBus"""
	if item_id == "potion":
		update_potion_count_from_game_manager()

func _on_inventory_updated():
	"""–û–±—Ä–æ–±–ª—è—î –ø–æ–¥—ñ—é –æ–Ω–æ–≤–ª–µ–Ω–Ω—è —ñ–Ω–≤–µ–Ω—Ç–∞—Ä—è —á–µ—Ä–µ–∑ EventBus"""
	update_potion_count_from_game_manager()

func animate_button():
	if button:
		var tween = create_tween()
		tween.tween_property(button, "scale", Vector2(1.2, 1.2), 0.1).set_trans(Tween.TRANS_BACK).set_ease(Tween.EASE_OUT)
		tween.tween_property(button, "scale", Vector2(1, 1), 0.1)


func spawn_potion(spawn_position: Vector2):
	"""–°–ø–∞–≤–Ω–∏—Ç—å –∑—ñ–ª–ª—è –¥–ª—è –ø—ñ–¥–±–æ—Ä—É"""
	var potion_scene = preload("res://SampleProject/Scenes/Objects/potion.tscn")
	var potion_instance = potion_scene.instantiate()
	potion_instance.position = spawn_position
	call_deferred("add_child", potion_instance)

func _exit_tree() -> void:
	"""–í—ñ–¥–ø–∏—Å—É—î—Ç—å—Å—è –≤—ñ–¥ –≤—Å—ñ—Ö —Å–∏–≥–Ω–∞–ª—ñ–≤ –ø—Ä–∏ –≤–∏–¥–∞–ª–µ–Ω–Ω—ñ –≤—É–∑–ª–∞ (–∑–∞–ø–æ–±—ñ–≥–∞–Ω–Ω—è –≤–∏—Ç–æ–∫—ñ–≤ –ø–∞–º'—è—Ç—ñ)"""
	_disconnect_all_signals()

func _disconnect_all_signals() -> void:
	"""–í—ñ–¥–ø–∏—Å—É—î—Ç—å—Å—è –≤—ñ–¥ –≤—Å—ñ—Ö —Å–∏–≥–Ω–∞–ª—ñ–≤ EventBus –¥–ª—è –∑–∞–ø–æ–±—ñ–≥–∞–Ω–Ω—è –≤–∏—Ç–æ–∫—ñ–≤ –ø–∞–º'—è—Ç—ñ"""
	if not Engine.has_singleton("EventBus"):
		return
	
	# –ü–µ—Ä–µ–≤—ñ—Ä—è—î–º–æ —Ç–∞ –≤—ñ–¥–ø–∏—Å—É—î–º–æ—Å—è –≤—ñ–¥ —Å–∏–≥–Ω–∞–ª—ñ–≤ —ñ–Ω–≤–µ–Ω—Ç–∞—Ä—è
	if EventBus.item_added.is_connected(_on_item_added):
		EventBus.item_added.disconnect(_on_item_added)
	if EventBus.item_removed.is_connected(_on_item_removed):
		EventBus.item_removed.disconnect(_on_item_removed)
	if EventBus.inventory_updated.is_connected(_on_inventory_updated):
		EventBus.inventory_updated.disconnect(_on_inventory_updated)
	
	# –ü–µ—Ä–µ–≤—ñ—Ä—è—î–º–æ —Ç–∞ –≤—ñ–¥–ø–∏—Å—É—î–º–æ—Å—è –≤—ñ–¥ —Å–∏–≥–Ω–∞–ª—É –∫–Ω–æ–ø–∫–∏
	if button and button.pressed.is_connected(_use_potion):
		button.pressed.disconnect(_use_potion)
	
	print("üé® PotionUI: Disconnected from all EventBus signals")

